# dotfiles

./: .gitignore  .gitmodules  AGENTS.md  CODE_STYLE.md  README.md  gitconfig  gitignore_global  install  install.conf.yaml  pyproject.toml  tmux.conf  vscode-keybindings.json  vscode-settings.json
.github/workflows/: static-checks.yml
bash/: aliases.bash  autocomplete.bash
codex/: AGENTS.md  README.md  config.toml  config_template.toml  deep.config.toml  default.config.toml  quick.config.toml  safe.config.toml  unattended.config.toml  yolo.config.toml
codex/rules/: default.rules
codex/skills/address-pr-comments/: SKILL.md
codex/skills/address-pr-comments/agents/: openai.yaml
codex/skills/address-pr-comments/scripts/: pr_review_threads.py
codex/skills/batch/: SKILL.md
codex/skills/batch/agents/: openai.yaml
codex/skills/batch/references/: orchestration-rubric.md
codex/skills/code-cleanup/: SKILL.md
codex/skills/code-cleanup/agents/: openai.yaml
codex/skills/create-cli/: SKILL.md
codex/skills/deploy-prod/: SKILL.md
codex/skills/do-optimize-step/: SKILL.md
codex/skills/domain-dns-ops/: SKILL.md
codex/skills/fix/: SKILL.md
codex/skills/fix-deployments/: SKILL.md
codex/skills/fix-optimize-loop/: SKILL.md
codex/skills/fix-prod/: SKILL.md
codex/skills/fix-status-checks/: SKILL.md
codex/skills/frontend-design/: SKILL.md
codex/skills/init-code-style/: SKILL.md
codex/skills/instruments-profiling/: SKILL.md
codex/skills/markdown-converter/: SKILL.md
codex/skills/memories/: SKILL.md
codex/skills/merge/: SKILL.md
codex/skills/native-app-performance/: SKILL.md
codex/skills/openai-image-gen/: SKILL.md
codex/skills/optimize/: SKILL.md
codex/skills/oracle/: SKILL.md
codex/skills/security-audit/: SKILL.md
codex/skills/swift-concurrency-expert/: SKILL.md
codex/skills/swiftui-liquid-glass/: SKILL.md
codex/skills/swiftui-performance-audit/: SKILL.md
codex/skills/swiftui-view-refactor/: SKILL.md
codex/skills/video-transcript-downloader/: SKILL.md
codex/skills/wiki/: SKILL.md
codex/skills/worktree-feature/: SKILL.md
codex/skills/yeet/: SKILL.md
codex/skills/yolo/: SKILL.md
config/kitty/: kitty.conf
config/zed/: keymap.json  settings.json
config/zellij/: config.kdl  stack-panes-horizontally
config/zellij/layouts/: default.kdl
cron/: cleanup.zsh  manage_date_folders.zsh
dotfiles/: __init__.py  __main__.py  cli.py  config.py  console.py  installer.py
matplotlib/: matplotlibrc
python/: create-python-project
python/template/: .gitignore  LICENSE  Makefile  pyproject.toml  setup.py
python/template/.github/workflows/: publish.yml  test.yml
scripts/: benchmark_gpu  browser-tools.impl.ts  browser-tools.ts  bump-version  docs-list.ts  flatten  get-port  http-server  install-zellij  iter_slurm_files  jpu  log-dir-from-proc-id  manage_dates  mk-code-ws  mkpass  mux-dl  pp  rename-prefix  shazam-song  slurm-get-job-path  slurm-log-files  stack-panes-horizontally  trash.ts  wut
shell/: aliases.sh  path.sh
ssh/: config
ssh/config.d/: aws  base  github  gpu  moltbot  robot
tests/: test_installer.py
zsh/: aliases.zsh  autocomplete.zsh  command_line.zsh
(+32 files in other folders)
