[project]

name = "[[PROJECT NAME]]"
description = "[[PROJECT DESCRIPTION]]"
authors = [
    { name = "[[PROJECT AUTHOR]]", email = "[[PROJECT AUTHOR EMAIL]]" },
]
license = "MIT"
readme = "README.md"
requires-python = ">= [[PROJECT PYTHON VERSION]]"
dynamic = ["version"]
dependencies = []

[project.urls]

Repository = "[[PROJECT URL]]"

[project.optional-dependencies]

dev = [
    # Linting.
    "ruff",
    "ty",
    # Tests.
    "pytest",
]

[build-system]

requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

include-package-data = true

[tool.setuptools.packages.find]

where = ["."]
include = ["[[PROJECT PYTHON NAME]]*"]

[tool.setuptools.package-data]

[[PROJECT PYTHON NAME]] = ["*.py", "*.txt", "py.typed"]

[tool.setuptools.dynamic]

version = {attr = "[[PROJECT PYTHON NAME]].__version__"}

[tool.pytest.ini_options]

addopts = "-rx -rf -x -q --full-trace"
testpaths = ["tests"]

markers = [
    "slow: Marks test as being slow",
]

[tool.ruff]

line-length = 120
target-version = "py310"

[tool.ruff.format]

quote-style = "double"
docstring-code-format = true

[tool.ruff.lint]

select = ["ANN", "D", "E", "F", "G", "I", "N", "PGH", "PLC", "PLE", "PLR", "PLW", "W"]

ignore = [
    "D101", "D102", "D103", "D104", "D105", "D106", "D107",
    "N812", "N817",
    "PLR0911", "PLR0912", "PLR0913", "PLR0915", "PLR2004",
    "PLW0603", "PLW2901",
]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]

"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]

known-first-party = ["[[PROJECT PYTHON NAME]]", "tests"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]

convention = "google"
